New features: builder mode (like the builder mode of Prometheus).  (#324)
the builder mode supports rendering load configuration pages through the response of the server.
